# dllm

./: .env.example  .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml
src/dllm/: __init__.py  banner.py  cli.py  config.py  discovery.py  distributed.py  model.py  peer.py  server.py  sharding.py  tools.py
src/dllm/model/: __init__.py  device_info.py  devices_flop.py
tests/: test_config.py  test_discovery.py  test_distributed_sharding.py  test_model_loading_options.py  test_peer_transport.py  test_server_payloads.py  test_sharding.py  test_tools.py
