[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dllm"
version = "0.1.0"
description = "Standalone distributed PyTorch inference server"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "torch>=2.1",
  "transformers>=4.57.1",
  "accelerate>=0.26",
  "safetensors>=0.4",
  "huggingface_hub>=1.12.0",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
dllm-server = "dllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
