[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dllm"
version = "1.0"
description = "Standalone sharded distributed PyTorch inference server"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["pytorch", "transformers", "distributed-inference", "sharding", "openai-api"]
dependencies = [
  "torch>=2.1",
  "transformers>=4.57.1",
  "accelerate>=0.26",
  "safetensors>=0.4",
  "huggingface-hub>=0.24",
  "bitsandbytes>=0.43",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
dllm-server = "dllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
